# caprand

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Embed.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
docs/: sample_to_img.py
examples/: bitplot.rs  cyclecount.rs  hist.rs  noise.rs  rand.rs  raw.rs  sernoise.rs  usbnoise.rs
signals/: 0.01uf.ipynb  0.047uf.ipynb  100k-0.01uf-1.ipynb  bits.ipynb  capacitors.txt  const.ipynb  flip1.csv  flip1.ipynb  flip2.csv  flip2.ipynb  get_bin.py  get_csvs.sh  get_csvs2.sh  l10const.down  l10const.up  l11simpler.down  l12noschmitt.down  l13-0047.down  l14-001.down  l9-0.01-1000-16384.txt.down  l9-0.01-1000-16384.txt.up  lowbit1-bytes.csv  mku16.py  mku32.py  mku8.py  nist.txt  noschmitt.ipynb  precise1.ipynb  preciseconst1.ipynb
src/: cap.rs  health.rs  lib.rs  rng.rs
