[package]
name = "caprand"
description = "RP2040 random number generator by timing capacitor pullup"
version = "0.1.0"
edition = "2021"
license = "0BSD"
repository = "https://github.com/mkj/caprand"
authors = ["Matt Johnston <matt@ucc.asn.au>"]

[dependencies]
cortex-m = "0.7"
embassy-rp = { version = "0.1.0" }
rp-pac = { version = "6", default-features = false }

getrandom = { version = "0.2", default-features = false }
rand = { version = "0.8", default-features = false }
critical-section = "1.1"
sha2 = { version = "0.10", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

log = { version = "0.4", default-features = false }
defmt = { version = "0.3", optional = true }

[dev-dependencies]

# "custom" feature is required to build getrandom with no_std
getrandom = { version = "0.2", features = ["custom"]}

# deps for demos
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt-rtt = { version = "0.3" }
defmt = { version = "0.3" }
heapless = "0.7"

# demos use embassy
cortex-m-rt = "0.7.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
embassy-rp = { version = "0.1.0",  features = ["time-driver", "nightly"] }
embassy-usb-driver = { version = "0.1.0" }
embassy-executor = { version = "=0.1.0", features = ["nightly", "integrated-timers"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-time = { version = "0.1.0" }
embedded-io = { version = "0.4", features = ["async"] }

[features]
defmt = [ "dep:defmt" ]

[profile.release]
debug = 2

[package.metadata.docs.rs]
features = ["getrandom/custom"]

[patch.crates-io]
# embassy isn't released to crates.io yet
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "4d60c715e683aaadf25d9f066bde805c725fefb4" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "4d60c715e683aaadf25d9f066bde805c725fefb4" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "4d60c715e683aaadf25d9f066bde805c725fefb4" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy", rev = "4d60c715e683aaadf25d9f066bde805c725fefb4" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "4d60c715e683aaadf25d9f066bde805c725fefb4" }
# embassy-rp = { path = "/home/matt/3rd/rs/embassy/embassy-rp" }
# embassy-time = { path = "/home/matt/3rd/rs/embassy/embassy-time" }
# embassy-usb = { path = "/home/matt/3rd/rs/embassy/embassy-usb" }
# embassy-futures = { path = "/home/matt/3rd/rs/embassy/embassy-futures" }

