[package]
name = "caprand"
description = "RP2040 secure random number generator by timing capacitor pullup"
version = "0.2.1"
edition = "2021"
license = "0BSD"
repository = "https://github.com/mkj/caprand"
authors = ["Matt Johnston <matt@ucc.asn.au>"]
categories = ["embedded", "cryptography"]
keywords = ["rp2040", "rng", "getrandom"]
# avoid images
exclude = [
    "docs/*",
]

[dependencies]
cortex-m = "0.7"
embassy-rp = { version = "0.10", default-features = false, features = ["rp2040", "unstable-pac"] }

rand = { version = "0.8", default-features = false }
critical-section = "1.2"
sha2 = { version = "0.10", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

log = { version = "0.4", default-features = false }
defmt = { version = "1.1", optional = true }

[dev-dependencies]

# "custom" feature is required to build getrandom with no_std
# To use with newer getrandom versions, there should be a
# __getrandom_v03_custom() in the application, calling
# caprand::getrandom().
getrandom = { version = "0.4" }

# deps for demos
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt-rtt = { version = "1.2" }
defmt = { version = "1.1" }
heapless = "0.9"

# demos use embassy
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
embassy-rp = { version = "0.10",  features = ["time-driver", "rp2040"] }
embassy-usb-driver = { version = "0.2" }
embassy-executor = { version = "0.10", features = ["executor-thread", "platform-cortex-m"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embassy-futures = "0.1"
embassy-time = "0.5"
embedded-io-async = "0.7"

[features]
defmt = [ "dep:defmt" ]

[profile.release]
debug = 2

[package.metadata.docs.rs]
features = ["getrandom/custom", "embassy-rp/rp2040"]
